added splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="weather_button">Find Weather</string>
     <string name="city_name">Enter a city Name</string>
     <string name="city_name_input">City Name</string>
+    <string name="splash_text">Your quick weather report </string>
 </resources>
