Context Menu Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="weather_button">Find Weather</string>
     <string name="city_name">Enter a city Name</string>
     <string name="city_name_input">City Name</string>
+    <string name="change_city">Change City</string>
+    <string name="exit">Exit</string>
+    <string name="refresh">Refresh</string>
 </resources>
