--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="change_city">Change City</string>
     <string name="exit">Exit</string>
     <string name="refresh">Refresh</string>
+    <string name="splash_text">Your quick weather report </string>
 </resources>
