--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="uv">UV</string>
     <string name="vis">Visibility</string>
     <string name="weather_button">Find Weather</string>
-    <string name="city_name">Enter a city Name</string>
+    <string name="city_name">Enter a City Name</string>
     <string name="city_name_input">City Name</string>
 </resources>
